# httpstatucpp

./: .gitignore  CMakeLists.txt  README.md  StatusCode.cpp  StatusCode.hpp  conanfile.txt  main.cpp
database/: 404.txt  database.json
tests/: CMakeLists.txt  tests.cpp
